model and controller test, unfinished

--- a/aplicacao/views/discontinued/index.ejs
+++ b/aplicacao/views/discontinued/index.ejs
@@ -1,10 +1,10 @@
-<%- include('./shared/html_header.ejs') %>
+<%- include('./layouts/html_header.ejs') %>
 
 <body>
 
-    <%- include('./shared/page_header.ejs') %>
+    <%- include('./layouts/page_header.ejs') %>
 
-    <%- include('./shared/page_sidebar.ejs') %>
+    <%- include('./layouts/page_sidebar.ejs') %>
 
     <!-- Modal -->
     <div class="modal fade" id="modalExemplo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -66,4 +66,4 @@
 
 </body>
 
-<%- include('./shared/html_footer.ejs') %>
+<%- include('./layouts/html_footer.ejs') %>
