--- a/aplicacao/views/results.ejs
+++ b/aplicacao/views/results.ejs
@@ -1,6 +1,6 @@
 					<% for( let i = 0; i < diseases.length; i++ ) { %>
 
-						<%- include('shared/disease_item', diseases[i]) %>
+						<%- include('layouts/disease_item', diseases[i]) %>
 
 					<% } %>
 
