--- a/aplicacao/views/results.ejs
+++ b/aplicacao/views/results.ejs
@@ -1,8 +1,6 @@
-					<% for( let i = 0; i < diseases.length; i++ ) { %>
 
-						<%- include('layouts/disease_item', diseases[i]) %>
+					<%- include('layouts/disease_item') %>
 
-					<% } %>
 
 					<div class="row v-divider-sm"></div>
 					<div class="row justify-content-center">
