--- a/aplicacao/views/results_modal.ejs
+++ b/aplicacao/views/results_modal.ejs
@@ -1,6 +1,6 @@
 	<% for( let i = 0; i < diseases.length; i++ ) { %>
 
-	<div class="modal fade" id="<%= diseases[i].tag %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal fade" id="modal_<%= i %>" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content color-light round-border-hw">
 				<div class="modal-header">
