--- a/aplicacao/views/diseases.ejs
+++ b/aplicacao/views/diseases.ejs
@@ -1,5 +1,2 @@
-				<% for( let i = 0; i < diseases.length; i++ ) { %>
 
-					<%- include('layouts/disease_item', diseases[i]) %>
-
-				<% } %>
+				<%- include('layouts/disease_item') %>
