--- a/aplicacao/views/layouts/page_sidebar.ejs
+++ b/aplicacao/views/layouts/page_sidebar.ejs
@@ -2,7 +2,7 @@
         <ul class="row nav navbar-nav container-flex togglew-row">
             <div class="col-12">
                 <li class="nav-item row active">
-                    <a class="nav-link" href="./home">
+                    <a class="nav-link" href="/home">
                         <svg class="bi bi-house-door" width="1.5em" height="1.5em" viewBox="0 0 16 16"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
@@ -15,7 +15,7 @@
                         <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item row">
-                    <a class="nav-link" href="./diseases">
+                    <a class="nav-link" href="/diseases">
                         <svg class="bi bi-droplet" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li class="nav-item row">
-                    <a class="nav-link" href="./terms">
+                    <a class="nav-link" href="/terms">
                         <svg class="bi bi-book" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li class="nav-item row">
-                    <a class="nav-link" href="./about">
+                    <a class="nav-link" href="/about">
                         <svg class="bi bi-info-square" width="1.5em" height="1.5em" viewBox="0 0 16 16"
                             fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
