--- a/aplicacao/views/sex.ejs
+++ b/aplicacao/views/sex.ejs
@@ -1,5 +1,4 @@
-
-					<div class="row justify-content-between">
-						<div class="col-5 col-md-4 col-lg-3"><button class="btn btn-hw color-heavy btn-block answer" aria-pressed="false" id="btn-left">Masculino</button></div>
-						<div class="col-5 col-md-4 col-lg-3"><button class="btn btn-hw color-heavy btn-block answer" aria-pressed="false" id="btn-right">Feminino</button></div>
+					<div class="row justify-content-between btn-group-toggle" data-toggle="buttons">
+						<div class="col-5 col-md-4 col-lg-3 btn-group-toggle radio"><label role="button" class="btn btn-hw color-heavy btn-block answer" id="btn-left" ><input required="true" value="M" aria-required="true" type="radio" name="current_radio" aria-pressed="false"><div class="v-center">Masculino</div class="v-center"></label></div>
+						<div class="col-5 col-md-4 col-lg-3 btn-group-toggle radio"><label role="button" class="btn btn-hw color-heavy btn-block answer" id="btn-right"><input required="true" value="F" aria-required="true" type="radio" name="current_radio" aria-pressed="false"><div class="v-center">Feminino</div class="v-center"></label></div>
 					</div>
