--- a/aplicacao/views/layouts/html_head.ejs
+++ b/aplicacao/views/layouts/html_head.ejs
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@900&family=Ubuntu&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 
     <title>HealthWeb</title>
 
