--- a/aplicacao/views/layouts/disease_list.ejs
+++ b/aplicacao/views/layouts/disease_list.ejs
@@ -2,12 +2,12 @@
 				<div class="row v-divider-sm"></div>
 				<div class="row justify-content-center">
 					<div class="col-8 col-md-6 col-lg-3">
-						<button class="btn btn-hw-sm color-medium btn-block" data-toggle="modal" data-target="#modal_<%= i %>" aria-expanded="false">
+					<<% if (diseases[i].value) { %>button<% } else { %>a href="/disease/<%= diseases[i].id %>"<% } %> class="btn btn-hw-sm color-medium btn-block" <% if (diseases[i].value) { %>data-toggle="modal" data-target="#modal_<%= i %>" aria-expanded="false"<% } %>>
 							<%= diseases[i].name %>
 							<% if (diseases[i].value) { %>
 							<span class="value"><%= diseases[i].value %>%</span>
 							<% } %>
-						</button>
+						</<% if (diseases[i].value) { %>button<% } else { %>a<% } %>>
 					</div>
 				</div>
 				<% } %>
