--- a/aplicacao/views/layouts/entitled.ejs
+++ b/aplicacao/views/layouts/entitled.ejs
@@ -4,5 +4,10 @@
 						<%= title %>
 					</h1>
 				</div>
+				<% if (content) { %>
 				<%- include(`../${content}`) %>
+				<% } %>
+				<% if (raw) { %>
+				<%- raw %>
+				<% } %>
 			</div>
