--- a/aplicacao/views/results.ejs
+++ b/aplicacao/views/results.ejs
@@ -1,5 +1,5 @@
 
-					<%- include('layouts/disease_item') %>
+					<%- include('layouts/disease_list') %>
 
 
 					<div class="row v-divider-sm"></div>
