now symptoms answer are linked to symptomId

--- a/aplicacao/views/age.ejs
+++ b/aplicacao/views/age.ejs
@@ -1,5 +1,5 @@
 					<div class="row justify-content-center">
 						<div class="col-12 col-md-10 col-lg-5">
-							<input required="true" aria-required="true" type="number" class="btn-hw border-heavy form-control" min="0" placeholder="55" aria-label="Idade" aria-describedby="basic-addon1" id="input-area" required>
+							<input required="true" aria-required="true" type="number" class="btn-hw border-heavy form-control" min="0" placeholder="55" aria-label="Idade" aria-describedby="basic-addon1" id="input-area" name="age" required>
 						</div>
 					</div>
