--- a/aplicacao/views/symptom.ejs
+++ b/aplicacao/views/symptom.ejs
@@ -1,4 +1,5 @@
 					<div class="row justify-content-between btn-group-toggle" data-toggle="buttons">
-						<div class="col-5 col-md-4 col-lg-3 btn-group-toggle radio"><label role="button" class="btn btn-hw color-no  btn-block answer" id="btn-left" ><input required="true" value="N" aria-required="true" type="radio" name="<% if (symptomId) { %><%- symptomId %><% } else { %>answer<% } %>" aria-pressed="false"><div class="v-center">Não</div class="v-center"></label></div>
-						<div class="col-5 col-md-4 col-lg-3 btn-group-toggle radio"><label role="button" class="btn btn-hw color-yes btn-block answer" id="btn-right"><input required="true" value="S" aria-required="true" type="radio" name="<% if (symptomId) { %><%- symptomId %><% } else { %>answer<% } %>" aria-pressed="false"><div class="v-center">Sim</div class="v-center"></label></div>
+						<div class="col-5 col-md-4 col-lg-3 btn-group-toggle radio"><label role="button" class="btn btn-hw color-no  btn-block answer" id="btn-left" ><input required="true" value="n" aria-required="true" type="radio" name="answer" aria-pressed="false"><div class="v-center">Não</div class="v-center"></label></div>
+						<div class="col-5 col-md-4 col-lg-3 btn-group-toggle radio"><label role="button" class="btn btn-hw color-yes btn-block answer" id="btn-right"><input required="true" value="s" aria-required="true" type="radio" name="answer" aria-pressed="false"><div class="v-center">Sim</div class="v-center"></label></div>
 					</div>
+					<input type="hidden" value="<%= symptomId %>" name="idSymptom"/>
