--- a/aplicacao/views/home_modal.ejs
+++ b/aplicacao/views/home_modal.ejs
@@ -14,7 +14,7 @@
                     Antes de prosseguir é necessário concordar com os termos de uso.
                 </div>
                 <div class="modal-footer">
-                    <a href="./terms.html" class="nav-link color-clear btn btn-block btn-hw-sm" role="button">
+                    <a href="/terms.html" class="nav-link color-clear btn btn-block btn-hw-sm" role="button">
                         <svg class="bi bi-book" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
@@ -26,7 +26,7 @@
                         </svg>
                         Termos de Uso
                     </a>
-                    <a href="./sex" class="nav-link btn btn-hw-sm btn-block color-medium breath-before"
+                    <a href="/questionnaire/answer" class="nav-link btn btn-hw-sm btn-block color-medium breath-before"
                         role="button">
                         Aceitar
                     </a>
