--- a/aplicacao/views/layouts/entitled.ejs
+++ b/aplicacao/views/layouts/entitled.ejs
@@ -7,6 +7,13 @@
 				<% if (content) { %>
 				<%- include(`../${content}`) %>
 				<% } %>
+				<% if (symptomNames) { %>
+					<ul>
+					  <% for( let i = 0; i < symptomNames.length; i++ ) { %>
+					  <li><%= symptomNames[i] %></li>
+					  <% } %>
+					</ul>
+				  <% } %>
 				<% if (raw) { %>
 				<%- raw %>
 				<% } %>
