--- a/aplicacao/views/layouts/page_sidebar.ejs
+++ b/aplicacao/views/layouts/page_sidebar.ejs
@@ -15,7 +15,7 @@
                         <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item row">
-                    <a class="nav-link" href="/diseases">
+                    <a class="nav-link" href="/disease">
                         <svg class="bi bi-droplet" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd"
